Removed junk files. Created simple shell script to create work report

--- a/uw-wkrpt-ece.tex
+++ b/uw-wkrpt-ece.tex
@@ -243,12 +243,12 @@ for text layout.
 
 % Here is a figure.  You MUST cite the figure in the text before it appears.
 %
-% I include an external picture here.  This picture is called don-hires.pdf.
+% I include an external picture here.  This picture is called -hires.pdf.
 % Notice how I do not specify the extension of the file.  pdfLaTeX knows
 % about PDFs only, so get your pictures into that format.
 \begin{figure}
   \centering
-  \includegraphics[height=3.0in]{don-hires}
+  \includegraphics[height=3.0in]{test.jpg}
   \caption[Donald E. Knuth, the creator of \TeX{}.]
           {Donald E. Knuth, the creator of \TeX{}.~\cite{ref:donpicture}}
   \label{fig:knuth}
