--- a/uw-wkrpt.cls
+++ b/uw-wkrpt.cls
@@ -322,8 +322,8 @@
     \renewcommand{\@secdotzeroend}[1]{}
     }{}%
   \ifthenelse{\boolean{uwwkrpt@ece} \or \boolean{uwwkrpt@se}}
-    %{\renewcommand{\@appendixtitle}{Appendix }}{}
-    {\renewcommand{\@appendixtitle}{\appendixname~\thesection. }}{}
+    {\renewcommand{\@appendixtitle}{Appendix }}{}
+    %{\renewcommand{\@appendixtitle}{\appendixname~\thesection. }}{}
 
   \appendix@rig%
 }
