Made instructions more logical.

--- a/sample-wkrpt.tex
+++ b/sample-wkrpt.tex
@@ -89,7 +89,7 @@ Please find enclosed my first work term report entitled:
 \pagebreak
 
 \section{Summary}
-This is a report that really does a lot. It explains some cool ideas and I really like to talk about them.
+This is a report that really does a lot. It explains stuff.
 \end{onehalfspacing}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% REPORT BODY
@@ -99,7 +99,7 @@ This is a report that really does a lot. It explains some cool ideas and I reall
 \mainmatter
 
 \section{Introduction}\label{sec:intro}
-This is such a cool thing! I love \LaTeX{}
+This is such a great intro.
 \pagebreak 
 
 \section{Sample Tables}
@@ -139,8 +139,6 @@ This section mostly is just a table.
 \section{TODO}
 This is an itemized list of things that need doing in the .cls file. \cite{ref:latex2e}
 \begin{itemize}
-    \item \sout{Numbering of sections $1 \rightarrow 1.0$} Done
-    \item Only one .cls file in main directory. 
     \item Appendix title  : add hyphen or colon
 \end{itemize}
 
@@ -150,6 +148,7 @@ This is an itemized list of things that need doing in the .cls file. \cite{ref:l
 \backmatter
 
 \bibliography{sample-bib}
+\pagebreak
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% APPENDICES
